--- a/package.json
+++ b/package.json
@@ -58,5 +58,8 @@
     "tsdx": "^0.13.2",
     "tslib": "^1.11.2",
     "typescript": "^3.8.3"
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
